# multi_robot_costmap_plugin

./: CMakeLists.txt  LICENSE  README.md  multi_robot_plugins.xml  package.xml  plugin.xml  plugins.xml
config/: multi_robot_costmap.yaml  nav2_params.yaml
include/multi_robot_costmap_plugin/: footprint_aware_multi_robot_layer.hpp  global_costmap_fusion.hpp  multi_robot_layer.hpp
launch/: example_single_robot_launch.py  multi_robot_costmap_launch.py  multi_robot_demo.launch.py
src/: footprint_aware_multi_robot_layer.cpp  global_costmap_fusion.cpp  global_costmap_fusion_node.cpp  multi_robot_layer.cpp
test/: test_footprint_utils.cpp
